--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ 
   "name": "pulsex_desktop",
   "version": "1.0.0",
   "description": "",
@@ -14,8 +14,10 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
+    "notifier": "^0.2.0",
     "socket.io": "^4.7.5"
   }
 }
