--- a/package.json
+++ b/package.json
@@ -1,23 +1,1 @@
-{ 
-  "name": "pulsex_desktop",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "express": "^4.18.3",
-    "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0",
-    "notifier": "^0.2.0",
-    "socket.io": "^4.7.5"
-  }
-}
+{"name":"pulsex_desktop","version":"1.0.0","description":"","main":"index.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"nodemon app"},"keywords":[],"author":"","license":"ISC","dependencies":{"bcrypt":"^5.1.1","express":"^4.18.3","fs-extra":"^11.2.0","http":"^0.0.1-security","jsonwebtoken":"^9.0.2","mongoose":"^8.2.1","nodemon":"^3.1.0","notifier":"^0.2.0","socket.io":"^4.7.5"}}
