--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "node-notifier": "^10.0.1",
     "nodemon": "^3.1.0",
-    "notifier": "^0.1.7",
+    "notifier": "^0.2.0",
     "socket.io": "^4.7.5"
   },
   "$schema": "./package.json"
