--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.0",
     "notifier": "^0.2.0",
